--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,21 +2,24 @@
                     THEME-COLORS
 =======================================================**/
 $primary: hsl(230, 82%, 61%); //#4A66ED
+$primarydark: hsl(230, 79%, 57%); //#3A57E8
 
 /**=====================================================**
                     TEXT-COLORS
 =======================================================**/
-
+$textprimary: hsl(221, 31%, 20%); //#232D42
+$secondarytext: hsl(223, 14%, 60%); //#8A92A6
+$textlight: hsl(224, 13%, 84%); //#D0D3DB
 
 /**=====================================================**
                     BACKGROUND-COLORS
 =======================================================**/
-
+$iconbg: hsl(228, 33%, 97%); //#F5F6FA
 
 /**=====================================================**
                     BORDER-COLORS
 =======================================================**/
-
+$notificationborder: hsl(0, 0%, 93%); //#EEEEEE
 
 /**=====================================================**
                     NORMAL-COLORS
@@ -27,12 +30,12 @@ $white: hsl(0, 0%, 100%);
 /**=====================================================**
                         SHADOWS
 =======================================================**/
-
+$shadow-1: rgb(138, 146, 166);
 
 /**=====================================================**
                         BOX-SHADOWS
 =======================================================**/
-
+$dropdown-shadow: drop-shadow(-0.25rem .25rem .25rem rgba($shadow-1, 0.15));
 
 /**=====================================================**
                         TEXT-SHADOWS
