--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,14 @@ TABLE OF CONTENT
 /**=====================================================**
                 ANIMATION-STYLES
 =======================================================**/
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+.header-nav .headerlist .notification {
+  -webkit-animation-duration: 250ms;
+          animation-duration: 250ms;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
 @-webkit-keyframes slideDownIn {
   0% {
     -webkit-transform: translateY(-100%);
@@ -78,6 +85,7 @@ TABLE OF CONTENT
     transform: translateY(-100%);
   }
 }
+
 @keyframes slideDownIn {
   0% {
     -webkit-transform: translateY(-100%);
@@ -151,6 +159,11 @@ TABLE OF CONTENT
     -webkit-transform: translateY(1.25rem);
     transform: translateY(1.25rem);
   }
+}
+
+.header-nav .headerlist .notification {
+  -webkit-animation-name: slideUpIn;
+          animation-name: slideUpIn;
 }
 
 @-webkit-keyframes slideUpInMobile {
@@ -602,7 +615,6 @@ section {
 html {
   font-size: 100%;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 /**=====================================================**
@@ -750,7 +762,7 @@ select {
 }
 
 .accordion-header .categorylink .titlebox .categorytitle {
-  font-family: "Roboto";
+  font-family: "Inter";
   font-style: normal;
   font-size: 0.875rem;
   font-weight: normal;
@@ -817,7 +829,7 @@ select {
 }
 
 .accordion-body .category-header .category-title {
-  font-family: "Roboto";
+  font-family: "Inter";
   font-style: normal;
   font-size: 1rem;
   font-weight: 700;
@@ -839,7 +851,7 @@ select {
 }
 
 .accordion-body .category-body .categorylist-link {
-  font-family: "Roboto";
+  font-family: "Inter";
   font-style: normal;
   font-size: 0.875rem;
   font-weight: normal;
@@ -910,7 +922,7 @@ select {
           align-items: center;
   -webkit-transition: top 250ms;
   transition: top 250ms;
-  padding: 0rem 0.5rem;
+  background: brown;
 }
 
 .header.sticky-header {
@@ -918,6 +930,196 @@ select {
   top: 0;
   left: 0;
   z-index: 999;
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.header-nav .headerlist {
+  margin-left: auto;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-nav .headerlist-item {
+  position: relative;
+}
+
+.header-nav .headerlist-item:not([disabled]):hover .notification {
+  display: block;
+}
+
+.header-nav .headerlist .notify-link {
+  height: 1.5rem;
+  width: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.header-nav .headerlist .notify-link svg {
+  width: 100%;
+  height: 100%;
+}
+
+.header-nav .headerlist .notification {
+  position: absolute;
+  top: 0;
+  top: 100%;
+  right: 0;
+  z-index: 100;
+  background: white;
+  -webkit-filter: drop-shadow(-0.25rem 0.25rem 0.25rem rgba(138, 146, 166, 0.15));
+          filter: drop-shadow(-0.25rem 0.25rem 0.25rem rgba(138, 146, 166, 0.15));
+  width: 18.75rem;
+  display: none;
+}
+
+.header-nav .headerlist .notification .notificationlist {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-height: 20.3125rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.header-nav .headerlist .notification .notificationlist::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.header-nav .headerlist .notification .notificationlist::-webkit-scrollbar-thumb {
+  border-radius: 1.25rem;
+  border-radius: 1.25rem;
+  background: #d1d4dc;
+}
+
+.header-nav .headerlist .notification .notificationlist-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.75rem;
+  padding: 0.875rem 1rem;
+  border-bottom: solid 0.0625rem #ededed;
+  background: white;
+}
+
+.header-nav .headerlist .notification .notificationlist-link .notification-thumbnail {
+  background: #f5f6fa;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.5rem;
+}
+
+.header-nav .headerlist .notification .notificationlist-link .details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.25rem;
+  width: calc(100% - 2rem);
+}
+
+.header-nav .headerlist .notification .notificationlist-link .details .title {
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.21;
+  max-width: 99%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.header-nav .headerlist .notification .notificationlist-link .details .date {
+  color: #d1d4dc;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.25;
+}
+
+.header-nav .headerlist .notification .notificationlist-link:not([disabled]):hover {
+  background: #fafafa;
+}
+
+.header-nav .headerlist .notification .notificationlist-link:not([disabled]):hover .details .title {
+  color: #232d43;
+}
+
+.header-nav .headerlist .notification-all {
+  padding: 1.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.header-nav .headerlist .notification-all .link {
+  color: #4a65ed;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.21;
+  -webkit-transition: color 250ms ease-in-out;
+  transition: color 250ms ease-in-out;
+}
+
+.header-nav .headerlist .notification-all .link:not([disabled]):hover {
+  color: #3b58e8;
 }
 
 /**=======================================================**
@@ -1211,7 +1413,7 @@ select {
 **=======================================================**/
 .tooltip-inner {
   background: #4a65ed;
-  font-family: "Roboto";
+  font-family: "Inter";
   font-style: normal;
   font-size: 0.75rem;
   font-weight: 500;
