--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -7,7 +7,7 @@
 	@include w100;
 	@include flex-center-vert;
 	transition: top $time;
-	padding: length(0) length(8);
+	background: brown;
 
 	&.sticky-header {
 		position: fixed;
@@ -16,7 +16,132 @@
 		z-index: 999;
 	}
 
-	
+	&-nav {
+		@include flex-end;
+
+		.headerlist {
+			// position: relative;
+			margin-left: auto;
+			@include list-horizontal;
+
+			&-item {
+				position: relative;
+				
+				@include hover {
+					.notification {
+						display: block;
+					}
+				}
+			}
+
+			.notify-link {
+				@include square(length(24));
+				@include flex-center;
+				overflow: hidden;
+
+				svg {
+					@include wh100;
+				}
+			}
+
+			.notification {
+				position: absolute;
+				top: 0;
+				top: 100%;
+				right: 0;
+				z-index: 100;
+				background: $white;
+				filter: $dropdown-shadow;
+				width: length(300);
+				display: none;
+				@extend %animation;
+				@extend %slideUpIn;
+
+				.notificationlist {
+					@include list-vertical;
+					max-height: length(325);
+					overflow-x: hidden;
+					overflow-y: scroll;
+
+					&::-webkit-scrollbar {
+						width: length(8);
+					}
+			
+					&::-webkit-scrollbar-thumb {
+						@include radius(20);
+						background: $textlight;
+					}
+
+					// &-item {
+					// 	&:last-child {
+					// 		.notificationlist-link {
+					// 			border-bottom: 0;
+					// 		}
+					// 	}
+					// }
+
+					&-link {
+						@include flex-center-vert;
+						gap: length(12);
+						padding: length(14) length(16);
+						@include border-single(bottom, solid, 1, $notificationborder);
+						background: $white;
+
+						.notification-thumbnail {
+							background: $iconbg;
+							@include square(length(32));
+							@include circle;
+							@include flex-center;
+							padding: length(8);
+						}
+
+						.details {
+							@include flex-column;
+							gap: length(4);
+							width: calc(100% - 2rem);
+
+							.title {
+								color: $secondarytext;
+								@include font-face($primaryFont, style('normal'), size(14), weight('normal'), line-height(16.94, 14));
+								@include text-overflow;
+							}
+
+							.date {
+								color: $textlight;
+								@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(15, 12));
+							}
+						}
+
+						@include hover {
+							background: lighten($notificationborder, 5%);
+
+							.details {
+								.title {
+									color: $textprimary;
+								}
+							}
+						}
+					}
+				}
+
+				&-all {
+					padding: length(20);
+					@include flex-center;
+					text-align: center;
+
+					.link {
+						color: $primary;
+						@include font-face($primaryFont, style('normal'), size(14), weight('normal'), line-height(16.94, 14));
+						@include transitionscolor;
+
+						@include hover {
+							color: $primarydark;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 /**=======================================================**
