--- a/scss/partials/_global-styles.scss
+++ b/scss/partials/_global-styles.scss
@@ -138,6 +138,7 @@ html {
 =======================================================**/
 
 body {
+	background: $bodybg;
 	margin: 0;
 	padding: 0;
 	position: relative;
