--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -15,6 +15,7 @@ $textlight: hsl(224, 13%, 84%); //#D0D3DB
                     BACKGROUND-COLORS
 =======================================================**/
 $iconbg: hsl(228, 33%, 97%); //#F5F6FA
+$bodybg: hsl(210, 16%, 93%); //#E9ECEF
 
 /**=====================================================**
                     BORDER-COLORS
