sidebar and header completed with responsive

--- a/scss/components/offcanvas/_offcanvas.scss
+++ b/scss/components/offcanvas/_offcanvas.scss
@@ -29,6 +29,7 @@
 
 	&-header {
 		position: relative;
+		padding: length(18) length(16);
 
 		.logo {
 			@include flex-center;
@@ -73,11 +74,12 @@
 
 		&::-webkit-scrollbar {
 			background: transparent;
-			width: length(8);
+			width: length(6);
 		}
 
 		&::-webkit-scrollbar-thumb {
 			@include radius(8);
+			background: $textlight;
 		}
 
 		.mobilemenu {
@@ -108,9 +110,11 @@
 
 					svg {
 						@include wh100;
+					}
 
+					.difficon {
 						path {
-							fill: $secondarytext;
+							fill: none;
 						}
 					}
 				}
@@ -131,6 +135,13 @@
 								fill: $primary;
 							}
 						}
+
+						.differicon {
+							path {
+								fill: none;
+								stroke: $primary;
+							}
+						}
 					}
 
 					.text {
@@ -139,6 +150,8 @@
 				}
 
 				&:hover:not(.active) {
+					// background: $itemhover;
+
 					&::before {
 						@include h100;
 					}
@@ -149,10 +162,175 @@
 								fill: $primary;
 							}
 						}
+
+						.differicon {
+							path {
+								fill: none;
+								stroke: $primary;
+							}
+						}
 					}
 
 					.text {
 						color: $primary;
+					}
+				}
+			}
+
+			.accordion {
+				padding-bottom: length(120);
+
+				&-item {
+					padding: length(10) length(12);
+					position: relative;
+
+					&::before {
+						content: '';
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: length(4);
+						height: length(0);
+						background: $primary;
+						transition: all $time ease-in-out;
+						@include double-radius(top, right, 4, bottom, right, 4);
+					}
+
+					.accordion-header {
+						.accordion-button {
+							background: transparent;
+							@include flex-center-vert;
+							gap: length(8);
+	
+							.icon {
+								@include square(length(24));
+								@include flex-center;
+								overflow: hidden;
+			
+								svg {
+									@include wh100;
+			
+									path {
+										fill: $secondarytext;
+									}
+								}
+
+								.differicon {
+									path {
+										fill: none;
+										stroke: $secondarytext;
+									}
+								}
+							}
+			
+							.text {
+								color: $secondarytext;
+								@include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(28, 16));
+							}
+						}
+					}
+
+					&.active {
+						&::before {
+							@include h100;
+						}
+
+						.accordion-header {
+							.accordion-button {
+								.icon {
+									svg {
+										path {
+											fill: $primary;
+										}
+									}
+
+									.differicon {
+										path {
+											fill: none;
+											stroke: $primary;
+										}
+									}
+								}
+			
+								.text {
+									color: $primary;
+								}
+							}
+						}
+					}
+	
+					&:hover:not(.active) {	
+						&::before {
+							@include h100;
+						}
+
+						.accordion-header {
+							.accordion-button {
+								.icon {
+									svg {
+										path {
+											fill: $primary;
+										}
+									}
+
+									.differicon {
+										path {
+											fill: none;
+											stroke: $primary;
+										}
+									}
+								}
+			
+								.text {
+									color: $primary;
+								}
+							}
+						}
+					}
+				}
+
+				&-button {
+					padding: length(0);
+
+					&:not(.collapsed) {
+						&::after {
+							@include transform(rotate(0deg));
+						}
+					}
+
+					&::after {
+						@include transform(rotate(-90deg));
+					}
+				}
+
+				&-body {
+					.sublist {
+						@include list-vertical;
+						padding-left: length(8);
+
+						&-link {
+							padding: length(8) length(24);
+							color: $secondarytext;
+							@include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(28, 16));
+							position: relative;
+
+							&::before {
+								position: absolute;
+								top: 50%;
+								left: length(-8);
+								@include transform(translateY(-50%));
+								@include square(length(24));
+								content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath opacity='0.4' d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='black'/%3E%3C/svg%3E%0A");
+							}
+
+							@include hover {
+								color: $primary;
+
+								&::before {
+									content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='%234A66ED'/%3E%3C/svg%3E");
+								}
+							}
+						}
 					}
 				}
 			}
