--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -4,6 +4,8 @@
 $primary: hsl(230, 82%, 61%); //#4A66ED
 $primarydark: hsl(230, 79%, 57%); //#3A57E8
 
+$itemhover: hsl(229, 78%, 95%); //#e7ebfc
+
 /**=====================================================**
                     TEXT-COLORS
 =======================================================**/
