--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -753,7 +753,11 @@ select {
 }
 
 .accordion-header .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%234A66ED'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.accordion-header .accordion-button::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238A92A6'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .accordion-header .accordion-button:focus {
@@ -1346,6 +1350,7 @@ select {
 
 .offcanvas-header {
   position: relative;
+  padding: 1.125rem 1rem;
 }
 
 .offcanvas-header .logo {
@@ -1418,12 +1423,13 @@ select {
 
 .offcanvas-body::-webkit-scrollbar {
   background: transparent;
-  width: 0.5rem;
+  width: 0.375rem;
 }
 
 .offcanvas-body::-webkit-scrollbar-thumb {
   border-radius: 0.5rem;
   border-radius: 0.5rem;
+  background: #d1d4dc;
 }
 
 .offcanvas-body .mobilemenu {
@@ -1482,8 +1488,8 @@ select {
   height: 100%;
 }
 
-.offcanvas-body .mobilemenu .menulink .icon svg path {
-  fill: #8b93a7;
+.offcanvas-body .mobilemenu .menulink .icon .difficon path {
+  fill: none;
 }
 
 .offcanvas-body .mobilemenu .menulink .text {
@@ -1503,6 +1509,11 @@ select {
   fill: #4a65ed;
 }
 
+.offcanvas-body .mobilemenu .menulink.active .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
 .offcanvas-body .mobilemenu .menulink.active .text {
   color: #4a65ed;
 }
@@ -1515,8 +1526,177 @@ select {
   fill: #4a65ed;
 }
 
+.offcanvas-body .mobilemenu .menulink:hover:not(.active) .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
 .offcanvas-body .mobilemenu .menulink:hover:not(.active) .text {
   color: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion {
+  padding-bottom: 7.5rem;
+}
+
+.offcanvas-body .mobilemenu .accordion-item {
+  padding: 0.625rem 0.75rem;
+  position: relative;
+}
+
+.offcanvas-body .mobilemenu .accordion-item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0.25rem;
+  height: 0rem;
+  background: #4a65ed;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button {
+  background: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .icon svg path {
+  fill: #8b93a7;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #8b93a7;
+}
+
+.offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .text {
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.75;
+}
+
+.offcanvas-body .mobilemenu .accordion-item.active::before {
+  height: 100%;
+}
+
+.offcanvas-body .mobilemenu .accordion-item.active .accordion-header .accordion-button .icon svg path {
+  fill: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-item.active .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-item.active .accordion-header .accordion-button .text {
+  color: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-item:hover:not(.active)::before {
+  height: 100%;
+}
+
+.offcanvas-body .mobilemenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .icon svg path {
+  fill: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .text {
+  color: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-button {
+  padding: 0rem;
+}
+
+.offcanvas-body .mobilemenu .accordion-button:not(.collapsed)::after {
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+
+.offcanvas-body .mobilemenu .accordion-button::after {
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+
+.offcanvas-body .mobilemenu .accordion-body .sublist {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 0.5rem;
+}
+
+.offcanvas-body .mobilemenu .accordion-body .sublist-link {
+  padding: 0.5rem 1.5rem;
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.75;
+  position: relative;
+}
+
+.offcanvas-body .mobilemenu .accordion-body .sublist-link::before {
+  position: absolute;
+  top: 50%;
+  left: -0.5rem;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  height: 1.5rem;
+  width: 1.5rem;
+  content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath opacity='0.4' d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='black'/%3E%3C/svg%3E%0A");
+}
+
+.offcanvas-body .mobilemenu .accordion-body .sublist-link:not([disabled]):hover {
+  color: #4a65ed;
+}
+
+.offcanvas-body .mobilemenu .accordion-body .sublist-link:not([disabled]):hover::before {
+  content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='%234A66ED'/%3E%3C/svg%3E");
 }
 
 /**=====================================================
@@ -1714,3 +1894,350 @@ select {
 /**=======================================================**
                         ANIMATION END
 **=======================================================**/
+/**=====================================================
+                      SIDEBAR START
+=====================================================**/
+.desktopsidebar {
+  width: 16.25rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  background: white;
+  display: none;
+}
+
+@media screen and (min-width: 62rem) {
+  .desktopsidebar {
+    display: block;
+  }
+}
+
+.desktopsidebar-header {
+  height: 4.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  border-bottom: solid 0.125rem #eaedf0;
+  border-right: solid 0.125rem #eaedf0;
+}
+
+.desktopsidebar-header .btn-toggle {
+  background: transparent;
+  border: none;
+  height: 1.875rem;
+  width: 1.875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: -0.9375rem;
+  z-index: 100;
+}
+
+.desktopsidebar-header .btn-toggle svg {
+  width: 100%;
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-height: calc(100% - 4.75rem);
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.desktopsidebar .desktopmenu::-webkit-scrollbar {
+  background: transparent;
+  width: 0.375rem;
+}
+
+.desktopsidebar .desktopmenu::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  background: #d1d4dc;
+}
+
+.desktopsidebar .desktopmenu .menulink {
+  padding: 0.625rem 0.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+  position: relative;
+}
+
+.desktopsidebar .desktopmenu .menulink::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0.25rem;
+  height: 0rem;
+  background: #4a65ed;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.desktopsidebar .desktopmenu .menulink .icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.desktopsidebar .desktopmenu .menulink .icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .menulink .icon .difficon path {
+  fill: none;
+}
+
+.desktopsidebar .desktopmenu .menulink .text {
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.75;
+}
+
+.desktopsidebar .desktopmenu .menulink.active::before {
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .menulink.active .icon svg path {
+  fill: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .menulink.active .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .menulink.active .text {
+  color: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .menulink:hover:not(.active)::before {
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .menulink:hover:not(.active) .icon svg path {
+  fill: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .menulink:hover:not(.active) .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .menulink:hover:not(.active) .text {
+  color: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion {
+  padding-bottom: 7.5rem;
+}
+
+.desktopsidebar .desktopmenu .accordion-item {
+  padding: 0.625rem 0.75rem;
+  position: relative;
+}
+
+.desktopsidebar .desktopmenu .accordion-item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0.25rem;
+  height: 0rem;
+  background: #4a65ed;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button {
+  background: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .icon svg path {
+  fill: #8b93a7;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #8b93a7;
+}
+
+.desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .text {
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.75;
+}
+
+.desktopsidebar .desktopmenu .accordion-item.active::before {
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .accordion-item.active .accordion-header .accordion-button .icon svg path {
+  fill: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-item.active .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-item.active .accordion-header .accordion-button .text {
+  color: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-item:hover:not(.active)::before {
+  height: 100%;
+}
+
+.desktopsidebar .desktopmenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .icon svg path {
+  fill: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .icon .differicon path {
+  fill: none;
+  stroke: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-item:hover:not(.active) .accordion-header .accordion-button .text {
+  color: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-button {
+  padding: 0rem;
+}
+
+.desktopsidebar .desktopmenu .accordion-button:not(.collapsed)::after {
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+
+.desktopsidebar .desktopmenu .accordion-button::after {
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+}
+
+.desktopsidebar .desktopmenu .accordion-body .sublist {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 0.5rem;
+}
+
+.desktopsidebar .desktopmenu .accordion-body .sublist-link {
+  padding: 0.5rem 1.5rem;
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.75;
+  position: relative;
+}
+
+.desktopsidebar .desktopmenu .accordion-body .sublist-link::before {
+  position: absolute;
+  top: 50%;
+  left: -0.5rem;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  height: 1.5rem;
+  width: 1.5rem;
+  content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath opacity='0.4' d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='black'/%3E%3C/svg%3E%0A");
+}
+
+.desktopsidebar .desktopmenu .accordion-body .sublist-link:not([disabled]):hover {
+  color: #4a65ed;
+}
+
+.desktopsidebar .desktopmenu .accordion-body .sublist-link:not([disabled]):hover::before {
+  content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='%234A66ED'/%3E%3C/svg%3E");
+}
+
+/**=====================================================
+                      SIDEBAR END
+=====================================================**/
